--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,4 @@
-test.project=Assignment
+test.project=Java Based Web UI Automation
 test.env=QA
-test.release=Version 1
+test.release=Report_Udeni
 update.qcenter=true
-
-pcpricing.UserName=ujay0733
-pcpricing.Password=Welcome1
